Base service for chatbot.